--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "expo-video": "^3.0.14",
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
